--- a/Hackathon2022/templates/authentication/index.html
+++ b/Hackathon2022/templates/authentication/index.html
@@ -5,10 +5,26 @@
     <title>Authentication</title>
 </head>
 <body>
+
+    {% for message in message %}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+        <strong>Message:</strong> {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+
     <h3>Welcome to our application!</h3>
 
+    {% if user.is_authenticated %}
+    <h3>Hello {{ fname }}</h3>
+    <h4>You are successfully logged in</h4>
+    <button type="submit"> <a href="/signout"> SignOut</a></button>
+
+    {% else %}
     <button type="submit"> <a href="/signup"> SignUp</a></button>
     <button type="submit"> <a href="/signin"> SignIn</a></button>
-    <button type="submit"> <a href="/signout"> SignOut</a></button>
+    {% endif %}
 </body>
 </html>
