various updates, finished home2

--- a/Hackathon2022/templates/authentication/index.html
+++ b/Hackathon2022/templates/authentication/index.html
@@ -26,5 +26,7 @@
     <button type="submit"> <a href="/signup"> SignUp</a></button>
     <button type="submit"> <a href="/signin"> SignIn</a></button>
     {% endif %}
+    <button type="submit"> <a href="/signout"> SignOut</a></button>
+    <button type="submit"> <a href="/home2"> Home2</a></button>
 </body>
 </html>
