--- a/Hackathon2022/templates/authentication/index.html
+++ b/Hackathon2022/templates/authentication/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    {% for message in message %}
+    {% for message in messages %}
     <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
         <strong>Message:</strong> {{ message }}
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
