--- a/Hackathon2022/templates/authentication/index.html
+++ b/Hackathon2022/templates/authentication/index.html
@@ -21,7 +21,7 @@
     <h3>Hello {{ fname }}</h3>
     <h4>You are successfully logged in</h4>
     <button type="submit"> <a href="/signout"> SignOut</a></button>
-
+    <button type="submit"> <a href="/stats"> Statistics</a></button>
     {% else %}
     <button type="submit"> <a href="/signup"> SignUp</a></button>
     <button type="submit"> <a href="/signin"> SignIn</a></button>
