--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ h1{
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size:21px;
     font-weight:normal;
+    height: 40px;
+    width: 40%;
 }
 
 p{
@@ -13,7 +15,18 @@ p{
     line-height:1.6em;
 }
 
-.button{
+button{
+    transition-duration: 0.4s;
+  }
+  
+button:hover{
+    background-color:plum;
+    color:thistle;
+    border: 2px solid transparent;
+  }
+
+
+button{
     background-color: powderblue;
     border:skyblue;
     color:slategray;
@@ -22,4 +35,5 @@ p{
     text-decoration:steelblue;
     display: inline-table;
     font: size 18px;
+    transition-duration: 0.4s;
 }
