--- a/Hackathon2022/templates/authentication/signin.html
+++ b/Hackathon2022/templates/authentication/signin.html
@@ -3,8 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        h3{
+        color:Tomato;
+        background-color: pink;
+        border: 2px solid salmon;
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size:50px;
+        font-weight:normal;
+        }
+        button{
+        transition-duration: 0.4s;
+        }
+
+        button:hover{
+        background-color:plum;
+        color:thistle;
+        border: 2px solid transparent;
+        }
+
+
+        button{
+        background-color: powderblue;
+        border:skyblue;
+        color:white;
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration:steelblue;
+        display: inline-table;
+        font: size 18px;
+        transition-duration: 0.4s;
+        }
+        label {
+        cursor: pointer;
+        color: Tomato;
+        background-color: pink;
+        border: 2px solid salmon;
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size:15px;
+        font-weight:normal;
+        }
+    </style>
 </head>
-<body>
+<body style="background-color:#34568B;">
     {% for message in messages %}
     <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
         <strong>Message:</strong> {{ message }}
