--- a/Hackathon2022/templates/authentication/index.html
+++ b/Hackathon2022/templates/authentication/index.html
@@ -3,9 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <title>Authentication</title>
-</head>
-<body>
+    <style>
+        h2{
+        color:tomato;
+        background-color: pink;
+        border: 2px solid salmon;
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size:50px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
 
+        button{
+        transition-duration: 0.4s;
+        }
+
+        button:hover{
+        background-color:plum;
+        color:thistle;
+        border: 2px solid transparent;
+        }
+
+
+        button{
+        background-color: powderblue;
+        border:skyblue;
+        color:white;
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration:steelblue;
+        display: inline-table;
+        font: size 18px;
+        transition-duration: 0.4s;
+        }
+        h3{
+        color:Tomato;
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size:20px;
+        font-weight:normal;
+        }
+        h4{
+        color:Tomato;
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size:20px;
+        font-weight:normal;
+        }
+
+    </style>
+</head>
+<body style="background-color:#34568B;">
     {% for message in messages %}
     <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
         <strong>Message:</strong> {{ message }}
@@ -15,7 +64,7 @@
     </div>
     {% endfor %}
 
-    <h3>Welcome to our application!</h3>
+    <h2 style="color:Tomato;">Welcome to our application!</h2>
 
     {% if user.is_authenticated %}
     <h3>Hello {{ fname }}</h3>
@@ -23,8 +72,8 @@
     <button type="submit"> <a href="/signout"> SignOut</a></button>
     <button type="submit"> <a href="/stats"> Statistics</a></button>
     {% else %}
-    <button type="submit"> <a href="/signup"> SignUp</a></button>
-    <button type="submit"> <a href="/signin"> SignIn</a></button>
+    <button type="submit"> <a href="/signup"> Sign Up</a></button>
+    <button type="submit"> <a href="/signin"> Sign In</a></button>
     {% endif %}
 
 </body>
