added individual web pages for each team with info

--- a/Hackathon2022/templates/authentication/northwestern.html
+++ b/Hackathon2022/templates/authentication/northwestern.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Purdue</title>
+    <title></title>
 
 
-    <h1>Purdue</h1>
+    <h1>Northwestern</h1>
 
     {% block content %}
 
