--- a/Hackathon2022/templates/authentication/index.html
+++ b/Hackathon2022/templates/authentication/index.html
@@ -8,10 +8,11 @@
         color:tomato;
         background-color: pink;
         border: 2px solid salmon;
-        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        font-size:50px;
-        height: 70px;
-        width: 60%;
+        font-family: Copperplate, Lucida Console, fantasy;
+        font-size:55px;
+        height: 75px;
+        width: 70%;
+
         text-align: center;
         font-weight:normal;
         }
@@ -33,8 +34,9 @@
         color:white;
         font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         padding: 15px 32px;
+        outline: none
         text-align: center;
-        text-decoration:steelblue;
+        text-decoration:none;
         display: inline-table;
         font: size 18px;
         transition-duration: 0.4s;
@@ -52,6 +54,13 @@
         font-weight:normal;
         }
 
+        strong{
+        color:Tomato;
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size:10px;
+        font-weight:normal;
+        }
+
     </style>
 </head>
 <body style="background-color:#34568B;">
@@ -64,7 +73,7 @@
     </div>
     {% endfor %}
 
-    <h2 style="color:Tomato;">Welcome to our application!</h2>
+    <h2 style="color:Tomato;"><center>Welcome to our application!</center></h2>
 
     {% if user.is_authenticated %}
     <h3>Hello {{ fname }}</h3>
