--- a/Hackathon2022/templates/authentication/stats.html
+++ b/Hackathon2022/templates/authentication/stats.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>home3</title>
+    <style>
+      th{
+      color:Tomato;
+      font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      }
+    </style>
 </head>
 <body style="background-color:#34568B;">
 
