--- a/Hackathon2022/templates/authentication/signup_kim.html
+++ b/Hackathon2022/templates/authentication/signup_kim.html
@@ -79,7 +79,7 @@
     </div>
     {% endfor %}
 
-    <h3><center>Sign Up</center></h3>
+    <h3>Sign Up</h3>
     <form action="/signup" method="post">
     {% csrf_token %}
         <p><label for="">Username</label>
