--- a/Hackathon2022/templates/authentication/index_kim.html
+++ b/Hackathon2022/templates/authentication/index_kim.html
@@ -8,7 +8,15 @@
             font-size: 40px;
             position: absolute;
             top: 50%; left: 50%;
-            transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-200%);
+            font-family: Copperplate, Lucida Console, fantasy;
+        }
+
+        h4 {
+            font-size: 20px;
+            position: absolute;
+            top: 50%; left: 50%;
+            transform: translateX(-50%) translateY(10%);
             font-family: Copperplate, Lucida Console, fantasy;
         }
 
@@ -16,14 +24,39 @@
             font-size: 40px;
             position: absolute;
             top: 50%; left: 50%;
-            transform: translateX(-50%) translateY(40%);
+            transform: translateX(-50%) translateY(-100%);
+            font-family: Copperplate, Lucida Console, fantasy;
         }
 
         h6 {
             font-size: 40px;
             position: absolute;
             top: 50%; left: 50%;
-            transform: translateX(-50%) translateY(50%);
+            transform: translateX(-50%) translateY(-50%);
+            font-family: Copperplate, Lucida Console, fantasy;
+        }
+
+        h7 {
+            font-size: 40px;
+            position: absolute;
+            top: 50%; left: 50%;
+            transform: translateX(-50%) translateY(250%);
+            font-family: Copperplate, Lucida Console, fantasy;
+        }
+
+        h8 {
+            font-size: 40px;
+            position: absolute;
+            top: 50%; left: 50%;
+            transform: translateX(-50%) translateY(150%);
+            font-family: Copperplate, Lucida Console, fantasy;
+        }
+        h9 {
+            font-size: 40px;
+            position: absolute;
+            top: 50%; left: 50%;
+            transform: translateX(-50%) translateY(-300%);
+            font-family: Copperplate, Lucida Console, fantasy;
         }
     </style>
 </head>
@@ -38,13 +71,13 @@
     </div>
     {% endfor %}
 
-    <h3><center>Welcome to our application!</center></h3>
+    <h3>Welcome to our application!</h3>
 
     {% if user.is_authenticated %}
-    <h3>>Hello {{ fname }}</h3>
+    <h9>Hello {{ fname }}</h9>
     <h4>You are successfully logged in</h4>
-    <button type="submit"> <a href="/signout"> SignOut</a></button>
-    <button type="submit"> <a href="/stats"> Statistics</a></button>
+    <h7><button type="submit"> <a href="/signout"> SignOut</a></button></h7>
+    <h8><button type="submit"> <a href="/stats"> Statistics</a></button></h8>
     {% else %}
     <h5><button type="submit"> <a href="/signup"> SignUp</a></button></h5>
     <h6><button type="submit"> <a href="/signin"> SignIn</a></button></h6>
