--- a/Hackathon2022/templates/authentication/index.html
+++ b/Hackathon2022/templates/authentication/index.html
@@ -6,12 +6,13 @@
     <style>
         h2{
         color:tomato;
-        background-color: pink;
-        border: 2px solid salmon;
+
+        font-size: 40px;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(-200%);
         font-family: Copperplate, Lucida Console, fantasy;
-        font-size:55px;
-        height: 75px;
-        width: 70%;
+
 
         text-align: center;
         font-weight:normal;
@@ -41,17 +42,39 @@
         font: size 18px;
         transition-duration: 0.4s;
         }
+        p1{
+        font-size: 40px;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(200%);
+        }
+        p2{
+        font-size: 40px;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(350%);
+        }
+        p3{
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(150%);
+        font-family: Copperplate, Lucida Console, fantasy;
+        }
         h3{
         color:Tomato;
-        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        font-size:20px;
-        font-weight:normal;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(-350%);
+        font-family: Copperplate, Lucida Console, fantasy;
+        font-size: 40px;
         }
         h4{
         color:Tomato;
-        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        font-size:20px;
-        font-weight:normal;
+        font-size: 20px;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(0%);
+        font-family: Copperplate, Lucida Console, fantasy;
         }
 
         strong{
@@ -60,6 +83,8 @@
         font-size:10px;
         font-weight:normal;
         }
+        p4{
+        }
 
     </style>
 </head>
@@ -67,22 +92,22 @@
     {% for message in messages %}
     <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
         <strong>Message:</strong> {{ message }}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <button1 type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
-        </button>
+        </button1>
     </div>
     {% endfor %}
 
-    <h2 style="color:Tomato;"><center>Welcome to our application!</center></h2>
+    <h2 style="color:Tomato;">Welcome to our application!</h2>
 
     {% if user.is_authenticated %}
     <h3>Hello {{ fname }}</h3>
     <h4>You are successfully logged in</h4>
-    <button type="submit"> <a href="/signout"> SignOut</a></button>
-    <button type="submit"> <a href="/stats"> Statistics</a></button>
+    <p4><button type="submit"> <a href="/signout"> SignOut</a></button></p4>
+    <p3><button type="submit"> <a href="/stats"> Statistics</a></button></p3>
     {% else %}
-    <button type="submit"> <a href="/signup"> Sign Up</a></button>
-    <button type="submit"> <a href="/signin"> Sign In</a></button>
+    <p1><button type="submit"> <a href="/signup"> Sign Up</a></button></p1>
+    <p2><button type="submit"> <a href="/signin"> Sign In</a></button></p2>
     {% endif %}
 
 </body>
