--- a/Hackathon2022/templates/authentication/signin.html
+++ b/Hackathon2022/templates/authentication/signin.html
@@ -6,12 +6,39 @@
     <style>
         h3{
         color:Tomato;
-        background-color: pink;
-        border: 2px solid salmon;
-        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        font-size:50px;
+
+        font-size: 40px;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(-500%);
+        font-family: Copperplate, Lucida Console, fantasy;
         font-weight:normal;
         }
+
+        p1{
+        font-size: 20px;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(-450%);
+        font-family: Lucida Console, monospace;
+        }
+
+        p2{
+        font-size: 20px;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(-300%);
+        font-family: Lucida Console, monospace;
+        }
+
+        p3{
+        font-size: 20px;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        font-family: Lucida Console, monospace;
+        }
+
         button{
         transition-duration: 0.4s;
         }
@@ -27,7 +54,7 @@
         background-color: powderblue;
         border:skyblue;
         color:white;
-        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: Lucida Console, monospace;
         padding: 15px 32px;
         text-align: center;
         text-decoration:steelblue;
@@ -38,9 +65,7 @@
         label {
         cursor: pointer;
         color: Tomato;
-        background-color: pink;
-        border: 2px solid salmon;
-        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
         font-size:15px;
         font-weight:normal;
         }
@@ -59,15 +84,15 @@
     <h3>Sign In</h3>
     <form action="/signin" method="post">
     {% csrf_token %}
-        <label for="">Username</label>
-        <input type="text" id="username" name="username" placeholder="Enter your username" Required>
+        <p1><label for="">Username</label>
+        <input type="text" id="username" name="username" placeholder="Enter your username" Required></p1>
         <br>
 
-        <label for="">Password</label>
-        <input type="password" id="pass1" name="pass1" placeholder="Enter your password" Required>
+        <p2><label for="">Password</label>
+        <input type="password" id="pass1" name="pass1" placeholder="Enter your password" Required></p2>
         <br>
 
-        <button type="submit">Sign In</button>
+        <p3><button type="submit">Sign In</button></p3>
 
     </form>
 </body>
