--- a/Hackathon2022/templates/authentication/index.html
+++ b/Hackathon2022/templates/authentication/index.html
@@ -5,7 +5,7 @@
     <title>Authentication</title>
     <style>
         h2{
-        color:tomato;
+        color:white;
 
         font-size: 40px;
         position: absolute;
@@ -61,7 +61,7 @@
         font-family: Copperplate, Lucida Console, fantasy;
         }
         h3{
-        color:Tomato;
+        color:white;
         position: absolute;
         top: 50%; left: 50%;
         transform: translateX(-50%) translateY(-350%);
@@ -69,7 +69,7 @@
         font-size: 40px;
         }
         h4{
-        color:Tomato;
+        color:white;
         font-size: 20px;
         position: absolute;
         top: 50%; left: 50%;
@@ -78,7 +78,7 @@
         }
 
         strong{
-        color:Tomato;
+        color:white;
         font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size:10px;
         font-weight:normal;
@@ -98,7 +98,7 @@
     </div>
     {% endfor %}
 
-    <h2 style="color:Tomato;">Welcome to our application!</h2>
+    <h2 style="color:white;">Welcome to our application!</h2>
 
     {% if user.is_authenticated %}
     <h3>Hello {{ fname }}</h3>
