--- a/Hackathon2022/templates/authentication/signup.html
+++ b/Hackathon2022/templates/authentication/signup.html
@@ -5,9 +5,8 @@
     <title>Title</title>
     <style>
         h3{
-        color:Tomato;
-        background-color: pink;
-        border: 2px solid salmon;
+        color:white;
+
         position: absolute;
         top: 50%; left: 50%;
         transform: translateX(-50%) translateY(-400%);
@@ -72,7 +71,7 @@
 
         label {
         cursor: pointer;
-        color: Tomato;
+        color: white;
         font-family: Lucida Console, monospace;
         font-size:15px;
         font-weight:normal;
