--- a/Hackathon2022/templates/authentication/signin.html
+++ b/Hackathon2022/templates/authentication/signin.html
@@ -7,74 +7,36 @@
         h3{
         color:white;
 
-        position: absolute;
-        top: 50%; left: 50%;
-        transform: translateX(-50%) translateY(-400%);
-        font-family: Copperplate, Lucida Console, fantasy;
-        font-size:50px;
-        height: 70px;
-        width: 60%;
-        text-align: center;
-        font-weight:normal;
-        }
-
-        p1 {
+        font-size: 40px;
         position: absolute;
         top: 50%; left: 50%;
         transform: translateX(-50%) translateY(-500%);
         font-family: Copperplate, Lucida Console, fantasy;
+        font-weight:normal;
         }
 
-        p2 {
+        p1{
+        font-size: 20px;
         position: absolute;
         top: 50%; left: 50%;
-        transform: translateX(-50%) translateY(-350%);
-        font-family: Copperplate, Lucida Console, fantasy;
+        transform: translateX(-50%) translateY(-450%);
+        font-family: Lucida Console, monospace;
         }
 
-        p3 {
+        p2{
+        font-size: 20px;
         position: absolute;
         top: 50%; left: 50%;
-        transform: translateX(-50%) translateY(-200%);
-        font-family: Copperplate, Lucida Console, fantasy;
+        transform: translateX(-50%) translateY(-300%);
+        font-family: Lucida Console, monospace;
         }
 
-        p4 {
+        p3{
+        font-size: 20px;
         position: absolute;
         top: 50%; left: 50%;
         transform: translateX(-50%) translateY(-50%);
-        font-family: Copperplate, Lucida Console, fantasy;
-        }
-
-        p5 {
-        position: absolute;
-        top: 50%; left: 50%;
-        transform: translateX(-50%) translateY(100%);
-        font-family: Copperplate, Lucida Console, fantasy;
-        }
-
-        p6 {
-        position: absolute;
-        top: 50%; left: 50%;
-        transform: translateX(-50%) translateY(250%);
-        font-family: Copperplate, Lucida Console, fantasy;
-        }
-
-        p7 {
-        position: absolute;
-        top: 50%; left: 50%;
-        transform: translateX(-40%) translateY(400%);
-        font-family: Copperplate, Lucida Console, fantasy;
-        }
-
-
-
-        label {
-        cursor: pointer;
-        color: white;
         font-family: Lucida Console, monospace;
-        font-size:15px;
-        font-weight:normal;
         }
 
         button{
@@ -92,13 +54,20 @@
         background-color: powderblue;
         border:skyblue;
         color:white;
-        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: Lucida Console, monospace;
         padding: 15px 32px;
         text-align: center;
         text-decoration:steelblue;
         display: inline-table;
         font: size 18px;
         transition-duration: 0.4s;
+        }
+        label {
+        cursor: pointer;
+        color: white;
+
+        font-size:15px;
+        font-weight:normal;
         }
     </style>
 </head>
@@ -112,34 +81,18 @@
     </div>
     {% endfor %}
 
-    <h3>Sign Up</h3>
-    <form action="/signup" method="post">
+    <h3>Sign In</h3>
+    <form action="/signin" method="post">
     {% csrf_token %}
         <p1><label for="">Username</label>
-        <input type="text" id="username" name="username" placeholder="Create a username (Only letters or numbers)" Required></p1>
+        <input type="text" id="username" name="username" placeholder="Enter your username" Required></p1>
         <br>
 
-        <p2><label for="">First Name</label>
-        <input type="text" id="fname" name="fname" placeholder="Enter Your First Name" Required></p2>
+        <p2><label for="">Password</label>
+        <input type="password" id="pass1" name="pass1" placeholder="Enter your password" Required></p2>
         <br>
 
-        <p3><label for="">Last Name</label>
-        <input type="text" id="lname" name="lname" placeholder="Enter Your Last Name" Required></p3>
-        <br>
-
-        <p4><label for="">Email Address</label>
-        <input type="email" id="email" name="email" placeholder="Enter your email address" Required></p4>
-        <br>
-
-        <p5><label for="">Password</label>
-        <input type="password" id="pass1" name="pass1" placeholder="Create a password" Required></p5>
-        <br>
-
-        <p6><label for="">Confirm your password</label>
-        <input type="password" id="pass2" name="pass2" placeholder="Confirm your password" Required></p6>
-        <br>
-
-        <p7><button type="submit">Sign Up</button></p7>
+        <p3><button type="submit">Sign In</button></p3>
 
     </form>
 </body>
