--- a/Hackathon2022/templates/authentication/stats.html
+++ b/Hackathon2022/templates/authentication/stats.html
@@ -5,8 +5,8 @@
     <title>home3</title>
     <style>
       th{
-      color:Tomato;
-      font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      color:white;
+      font-family: Copperplate, Lucida Console, fantasy;
       }
     </style>
 </head>
