added college web page buttons

--- a/Hackathon2022/templates/authentication/index.html
+++ b/Hackathon2022/templates/authentication/index.html
@@ -105,6 +105,8 @@
     <h4>You are successfully logged in</h4>
     <p4><button type="submit"> <a href="/signout"> SignOut</a></button></p4>
     <p3><button type="submit"> <a href="/stats"> Statistics</a></button></p3>
+    <p3><button type="submit"> <a href="/list"> Colleges</a></button></p3>
+
     {% else %}
     <p1><button type="submit"> <a href="/signup"> Sign Up</a></button></p1>
     <p2><button type="submit"> <a href="/signin"> Sign In</a></button></p2>
