--- a/Hackathon2022/templates/authentication/wisconsin.html
+++ b/Hackathon2022/templates/authentication/wisconsin.html
@@ -2,8 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Purdue</title>
+    <title>Wisconsin</title>
+<style>
+        h1{
+        color:red;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(-400%);
+        font-family: Copperplate, Lucida Console, fantasy;
+        font-size:50px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
 
+        h2{
+        color:red;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(-250%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+        h3{
+        color:red;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(-150%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+    </style>
+<body style="background-color:#FFFFFF;">
 
     <h1>Wisconsin</h1>
 
@@ -17,7 +58,6 @@
 
 
 </head>
-<body>
 
 </body>
 </html>
