--- a/Hackathon2022/templates/authentication/illinois.html
+++ b/Hackathon2022/templates/authentication/illinois.html
@@ -2,7 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Purdue</title>
+    <title>Illinois</title>
+    <style>
+        h1{
+        color:darkorange;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(-400%);
+        font-family: Copperplate, Lucida Console, fantasy;
+        font-size:50px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+        h2{
+        color:darkorange;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(-250%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+        h3{
+        color:darkorange;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(-150%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+    </style>
+</head>
+<body style="background-color:#34568B;">
 
 
     <h1>Illinois</h1>
@@ -13,11 +56,5 @@
             <h3>Wins: {{content.win}} Losses: {{content.loss}}</h3>
 
     {% endblock %}
-
-
-
-</head>
-<body>
-
 </body>
 </html>
