--- a/Hackathon2022/templates/authentication/index.html
+++ b/Hackathon2022/templates/authentication/index.html
@@ -60,6 +60,19 @@
         transform: translateX(-50%) translateY(150%);
         font-family: Copperplate, Lucida Console, fantasy;
         }
+        p4{
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(450%);
+        font-family: Copperplate, Lucida Console, fantasy;
+        }
+
+        p5 {
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(300%);
+        font-family: Copperplate, Lucida Console, fantasy;
+        }
         h3{
         color:white;
         position: absolute;
@@ -83,8 +96,7 @@
         font-size:10px;
         font-weight:normal;
         }
-        p4{
-        }
+
 
     </style>
 </head>
@@ -105,7 +117,7 @@
     <h4>You are successfully logged in</h4>
     <p4><button type="submit"> <a href="/signout"> SignOut</a></button></p4>
     <p3><button type="submit"> <a href="/stats"> Statistics</a></button></p3>
-    <p3><button type="submit"> <a href="/list"> Colleges</a></button></p3>
+    <p5><button type="submit"> <a href="/list"> Colleges</a></button></p5>
 
     {% else %}
     <p1><button type="submit"> <a href="/signup"> Sign Up</a></button></p1>
