redesigned stats and colleges

--- a/Hackathon2022/templates/authentication/list.html
+++ b/Hackathon2022/templates/authentication/list.html
@@ -3,31 +3,262 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <h1>Colleges</h1>
+    <style>
+        h1{
+        color:white;
 
+        font-size: 40px;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(-500%);
+        font-family: Copperplate, Lucida Console, fantasy;
 
-    <p3><button type="submit"> <a href="/michigan_state"> Michigan State</a></button></p3>
-    <p3><button type="submit"> <a href="/wisconsin"> Wisconsin</a></button></p3>
-    <p3><button type="submit"> <a href="/illinois"> Illinois</a></button></p3>
-    <p3><button type="submit"> <a href="/ohio_state"> Ohio State</a></button></p3>
-    <p3><button type="submit"> <a href="/rutgers"> Rutgers</a></button></p3>
-    <p3><button type="submit"> <a href="/indiana"> Indiana</a></button></p3>
-    <p3><button type="submit"> <a href="/purdue"> Purdue</a></button></p3>
-    <p3><button type="submit"> <a href="/iowa"> Iowa</a></button></p3>
-    <p3><button type="submit"> <a href="/penn_state"> Penn State</a></button></p3>
-    <p3><button type="submit"> <a href="/michigan"> Michigan</a></button></p3>
-    <p3><button type="submit"> <a href="/northwestern"> Northwestern</a></button></p3>
-    <p3><button type="submit"> <a href="/maryland"> Maryland</a></button></p3>
-    <p3><button type="submit"> <a href="/minnesota"> Minnesota</a></button></p3>
-    <p3><button type="submit"> <a href="/nebraska"> Nebraska</a></button></p3>
+        text-align: center;
+        font-weight:normal;
+        }
 
+        button{
+        transition-duration: 0.4s;
+        }
 
+        button:hover{
+        background-color:plum;
+        color:thistle;
+        border: 2px solid transparent;
+        }
 
+        button{
+        background-color: powderblue;
+        border:skyblue;
+        color:white;
+        font-family: Lucida Console, monospace;
+        padding: 7px 15px;
+        text-align: center;
+        text-decoration:steelblue;
+        display: inline-table;
+        font: size 18px;
+        transition-duration: 0.4s;
+        }
+        label {
+        cursor: pointer;
+        color: white;
 
+        font-size:15px;
+        font-weight:normal;
+        }
 
+        p1{
+        color:white;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(-150%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+        p2{
+        color:white;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(-100%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+        p3{
+        color:white;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+        p4{
+        color:white;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(0%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+        p5{
+        color:white;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(50%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+        p6{
+        color:white;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(100%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+        p7{
+        color:white;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(150%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+        p8{
+        color:white;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(200%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+        p9{
+        color:white;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(250%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+        p10{
+        color:white;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(300%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+        p11{
+        color:white;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(350%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+        p12{
+        color:white;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(400%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+        p13{
+        color:white;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(450%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+        p14{
+        color:white;
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translateX(-50%) translateY(500%);
+        font-family: Lucida Console, monospace;
+        font-size:30px;
+        height: 70px;
+        width: 60%;
+        text-align: center;
+        font-weight:normal;
+        }
+
+    </style>
 
 </head>
-<body>
+
+<body style="background-color:#34568B;">
+{% for message in messages %}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+        <strong>Message:</strong> {{ message }}
+        <button1 type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        </button1>
+    </div>
+    {% endfor %}
+    <h1>Colleges</h1>
+
+    <p1><button type="submit"> <a href="/michigan_state"> Michigan State</a></button></p1>
+    <p2><button type="submit"> <a href="/wisconsin"> Wisconsin</a></button></p2>
+    <p3><button type="submit"> <a href="/illinois"> Illinois</a></button></p3>
+    <p4><button type="submit"> <a href="/ohio_state"> Ohio State</a></button></p4>
+    <p5><button type="submit"> <a href="/rutgers"> Rutgers</a></button></p5>
+    <p6><button type="submit"> <a href="/indiana"> Indiana</a></button></p6>
+    <p7><button type="submit"> <a href="/purdue"> Purdue</a></button></p7>
+    <p8><button type="submit"> <a href="/iowa"> Iowa</a></button></p8>
+    <p9><button type="submit"> <a href="/penn_state"> Penn State</a></button></p9>
+    <p10><button type="submit"> <a href="/michigan"> Michigan</a></button></p10>
+    <p11><button type="submit"> <a href="/northwestern"> Northwestern</a></button></p11>
+    <p12><button type="submit"> <a href="/maryland"> Maryland</a></button></p12>
+    <p13><button type="submit"> <a href="/minnesota"> Minnesota</a></button></p13>
+    <p14><button type="submit"> <a href="/nebraska"> Nebraska</a></button></p14>
+
 
 </body>
 </html>
