--- a/Hackathon2022/templates/authentication/stats.html
+++ b/Hackathon2022/templates/authentication/stats.html
@@ -8,6 +8,7 @@
       color:white;
       font-family: Copperplate, Lucida Console, fantasy;
       }
+
     </style>
 </head>
 <body style="background-color:#34568B;">
@@ -15,11 +16,11 @@
 
     <table>
   <tr>
-    <th>Year</th>
-    <th>Home Team</th>
-    <th>Pts</th>
-    <th>Away Team</th>
-    <th>Pts</th>
+    <th><u>Year</u></th>
+    <th><u>Home Team</u></th>
+    <th><u>Pts</u></th>
+    <th><u>Away Team</u></th>
+    <th><u>Pts</u></th>
   </tr>
 
 {% block content %}
