--- a/Hackathon2022/templates/authentication/index.html
+++ b/Hackathon2022/templates/authentication/index.html
@@ -110,7 +110,7 @@
     </div>
     {% endfor %}
 
-    <h2 style="color:white;">Welcome to our application!</h2>
+    <h2 style="color:white;">Welcome to The Social Ten!</h2>
 
     {% if user.is_authenticated %}
     <h3>Hello {{ fname }}</h3>
