--- a/Hackathon2022/templates/authentication/stats.html
+++ b/Hackathon2022/templates/authentication/stats.html
@@ -9,11 +9,35 @@
       font-family: Copperplate, Lucida Console, fantasy;
       }
 
+      button{
+        transition-duration: 0.4s;
+        }
+
+        button:hover{
+        background-color:plum;
+        color:thistle;
+        border: 2px solid transparent;
+        }
+
+
+        button{
+        background-color: powderblue;
+        border:skyblue;
+        color:white;
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        padding: 8px 10px;
+        text-align: center;
+        text-decoration:steelblue;
+        display: inline-table;
+        font: size 18px;
+        transition-duration: 0.4s;
+        }
+
     </style>
 </head>
 <body style="background-color:#34568B;">
 
-
+    <button type="submit"> <a href="/signout"> SignOut</a></button>
     <table>
   <tr>
     <th><u>Year</u></th>
@@ -36,6 +60,7 @@
 
   {% endfor %}
 {% endblock %}
+
 
 
 
